--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ charset-normalizer==3.4.2
 click==8.1.8
 colorama==0.4.6
 contourpy==1.1.1
-cryptography==46.0.2
+cryptography
 curl_cffi==0.9.0
 cycler==0.12.1
 et_xmlfile==2.0.0
@@ -26,13 +26,13 @@ itsdangerous==2.2.0
 Jinja2==3.1.6
 kiwisolver==1.4.7
 MarkupSafe==2.1.5
-matplotlib==3.7.5
+matplotlib
 multitasking==0.0.12
-numpy==1.24.4
+numpy
 openpyxl==3.1.5
 outcome==1.3.0.post0
 packaging==25.0
-pandas==2.0.3
+pandas
 peewee==3.18.2
 pillow==10.4.0
 platformdirs==4.3.6
@@ -59,5 +59,5 @@ websocket-client==1.8.0
 websockets==13.1
 Werkzeug==3.0.6
 wsproto==1.2.0
-yfinance==0.2.65
+yfinance
 zipp==3.20.2
